# pycutter

./: .pre-commit-config.yaml  README.md  cookiecutter.json  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cicd.yml
docs/: SETUP.md
{{ cookiecutter.project_name }}/: .pre-commit-config.yaml  README.md  pyproject.toml
{{ cookiecutter.project_name }}/.github/: dependabot.yml
{{ cookiecutter.project_name }}/.github/workflows/: cicd.yml
{{ cookiecutter.project_name }}/{{ cookiecutter.project_name }}/: __init__.py  __main__.py
{{ cookiecutter.project_slug }}/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
{{ cookiecutter.project_slug }}/.github/: dependabot.yml
{{ cookiecutter.project_slug }}/.github/workflows/: cicd.yml
{{ cookiecutter.project_slug }}/config/: logging.dev.ini  logging.prod.ini
{{ cookiecutter.project_slug }}/docs/: SETUP.md
