[tool.poetry]
name = "pycutter"
version = "0.1.0"
description = ""
authors = ["Mohamad Hallak <16711801+mrhallak@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cookiecutter = "^2.5.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.2.1"
pre-commit = "^3.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
